2006-08-09  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #348565

	* em-format-html-display.c (efhd_bar_resize) (efhd_add_bar): Check 
	the bar size, 	before setting the width. The width goes to zero, 
	when switching from classic to vertical view and vice versa.

2006-08-09  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #350411 #350476
	
	* em-mailer-prefs.c (notify_sound_changed): When prefs comes up,
	nothing is set in FILE chooser, so it returns NULL and bypass it.
	(em_mailer_prefs_construct): Get the file chooser widget before
	setting radio active.

2006-08-08  Harish Krishnaswamy  <kharish@novell.com>

	* em-folder-tree.c: Add header glib/gi18n.h to provide the missing
	symbol required by the previous commit. This was an ugly crasher
	on the release tarball candidate.
	
2006-08-07  Karsten Bräckelmann  <guenther@rudersport.de>

	* em-folder-tree.c (render_display_name): Marking vFolder names in
	the folder tree localizable. Fixes bug #330915 (Roozbeh Pournader).

2006-08-04  Johnny Jacob  <jjohnny@novell.com>

	* em-format-html-display.c : Added mnemonic for "Fi_nd" and
	"Fo_rward".
	* em-folder-browser.c : (get_view_query) : Added query for
	"messages masrked as important"
	
2006-08-02  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #335241

	* mail-send-recv.c: (dialog_map), (build_dialog): Let the send receive
	dialog grow to a fixed size, before we show the scroll bar. 

2006-07-26  Alessandro Decina <alessandro@nnva.org>

	** Fix for bug #348164
	
	* em-folder-browser.c: (emfb_class_init):
	Remove the unused G_TYPE_STRING parameter from the
	account_search_activated and account_search_cleared signals.

	* mail-component.c: (disable_folder_tree), (enable_folder_tree):
	Update the callbacks to match the new signature.

2006-07-28  Sankar P  <psankar@novell.com>

	* committed on behalf of Srinivasa Ragavan <sragavan@novell.com>
	* em-icon-stream.c: (emis_fit):
	We dont scale on height if the maxheight is zero