@@ -1,5 +1,15 @@
 2006-08-09  Srinivasa Ragavan  <sragavan@novell.com>
 
+	* em-folder-browser.c: (em_folder_browser_get_wide),
+	(emfb_activate): Get the wide status from the priv struct when
+	available already instead of gconf.
+	* em-folder-browser.h: 
+	* em-folder-view.c: (emfv_setup_view_instance): Get the wide status
+	from the parent struct. It avoids a race, where it shows compressed
+	headers in classic view and vice versa.
+
+2006-08-09  Srinivasa Ragavan  <sragavan@novell.com>
+
 	** Fix for bug #348565
 
 	* em-format-html-display.c (efhd_bar_resize) (efhd_add_bar): Check 
